# triggerfish

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC-C2-SIGNAL.md  SPEC-TOOL-WORKSPACE-SECURITY.md  TOOLS-IMPLEMENTATION-GUIDE.md  deno.json  setup-phase-c.sh  tmp_count.ts
.claude/agents/: security-reviewer.md  tdd-runner.md
.claude/rules/: agent.md  cli.md  code-style.md  core.md  dependency-layers.md  domain-concepts.md  gateway.md  integrations.md  ralph-wiggum.md  security.md  serviceability.md  skills.md  testing.md  tool-behavior.md  tools.md  workflow.md
.github/workflows/: .claude-code-review.yml.swp  build-tauri.yml  claude-code-review.yml  claude.yml  cve-scan.yml  docs.yml  hygiene.yml  pr-checks.yml  pr-hygiene.yml  release.yml  translate-blog.yml
config/: triggerfish.example.yaml
deploy/docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.release  docker-compose.hardened.yml  docker-compose.yml  install.sh  triggerfish
docs/: CNAME  account.md  cookie-policy.md  deployment.md  index.md  package-lock.json  package.json  pricing.md  privacy-policy.md  terms-of-service.md
plans/: tool-profiles.md
scripts/: install.ps1  install.sh  ralph-loop.sh  stamp_version.ts  uninstall.ps1  uninstall.sh
src/: mod.ts  version.ts
tauri/: Cargo.toml  tauri.conf.json
tauri/frontend/: index.html
tauri/icons/: icon.icns
tauri/src/: health.rs  lib.rs  main.rs  notifications.rs  session_key.rs  tray.rs
test-seeds/: setup_test.ts
tidepool-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+4456 files in other folders)
