[package]
name = "triggerfish-tidepool"
version = "0.1.0"
edition = "2021"
description = "Native UI shell for Triggerfish Tidepool"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "triggerfish-tidepool"
path = "src/main.rs"
